// This file is automatically generated by sila2lib.proto_builder.proto_builder version 0.2.0
// :generation date: 2021-10-04 15:11:58
//
// ---- PLEASE DO NOT MODIFY MANUALLY !! ---

syntax = "proto3";
import "SiLAFramework.proto";
package sila2.org.silastandard.core.authenticationservice.v1;

// Feature: Authentication Service
//
//       This Feature provides SiLA Clients with access tokens based on a user identification and password.
//       1. the user needs to login with the Login command into the server with a user identification (=user name) and a
//   password
//       2. after verification, an Access Token with the Token Lifetime information will be generated and provided by the
//   server.
//       3. the user can log-out from the server with the Logout command - a valid Access Token is required to run this
//   command.
//
service AuthenticationService {
    // Login
    //   Provides an access token based on user information.
    rpc Login(sila2.org.silastandard.core.authenticationservice.v1.Login_Parameters) returns (sila2.org.silastandard.core.authenticationservice.v1.Login_Responses) {}
    // Logout
    //   Invalidates the given access token immediately.
    rpc Logout(sila2.org.silastandard.core.authenticationservice.v1.Logout_Parameters) returns (sila2.org.silastandard.core.authenticationservice.v1.Logout_Responses) {}


}

// ----------------- Data Type definitions -----------------


// ------ Command Parameter and Response definitions -------
message Login_Parameters {
    sila2.org.silastandard.String UserIdentification = 1;
    sila2.org.silastandard.String Password = 2;
    // Constrained type, not reflected in protocol buffers
    sila2.org.silastandard.String RequestedServer = 3;
    repeated // Constrained type, not reflected in protocol buffers
    sila2.org.silastandard.String RequestedFeatures = 4;
}

message Login_Responses {
    sila2.org.silastandard.String AccessToken = 1;
    // Constrained type, not reflected in protocol buffers
    sila2.org.silastandard.Integer TokenLifetime = 2;
}

message Logout_Parameters {
    sila2.org.silastandard.String AccessToken = 1;
}

message Logout_Responses {

}


// ----------------- Metadata Definitions ------------------
