// This file is automatically generated by sila2lib.proto_builder.proto_builder version 0.2.0
// :generation date: 2021-10-08 11:02:57
//
// ---- PLEASE DO NOT MODIFY MANUALLY !! ---

syntax = "proto3";
import "SiLAFramework.proto";
package sila2.org.silastandard.core.commands.cancelcontroller.v1;

// Feature: Cancel Controller
//
//       This feature offers commands to cancel/terminate Commands. Cancellation is the act of stopping the running Command
//   execution(s),
//       irrevocably. The SiLA Server SHOULD be able to be in a state where any further
//       commands can be issued after a cancellation.
//
service CancelController {
    // Cancel Command
    //
    //         Cancel a specified currently running Observable Command or cancel all currently running Observable Commands .
    //         For any canceled Observable Command the SiLA Server MUST update the Command Execution Status to "Command Finished
    //         with Error".
    //         The SiLA Server MUST throw a descriptive error message indicating cancellation as the reason for the Command
    //         execution not being able to finish successfully for any canceled Command.
    //
    rpc CancelCommand(sila2.org.silastandard.core.commands.cancelcontroller.v1.CancelCommand_Parameters) returns (sila2.org.silastandard.core.commands.cancelcontroller.v1.CancelCommand_Responses) {}
    // Cancel All
    //
    //         Cancels all currently running Observable and Unobservable Commands running on this SiLA Server.
    //         The SiLA Server MUST throw an Execution Error indicating 'cancellation' as the reason for the
    //         Command not being able to finish successfully.
    //
    rpc CancelAll(sila2.org.silastandard.core.commands.cancelcontroller.v1.CancelAll_Parameters) returns (sila2.org.silastandard.core.commands.cancelcontroller.v1.CancelAll_Responses) {}


}

// ----------------- Data Type definitions -----------------
// UUID
//   A Universally Unique Identifier (UUID) referring to observable command executions.
message DataType_UUID {
    // Constrained type, not reflected in protocol buffers
    sila2.org.silastandard.String UUID = 1;
}

// ------ Command Parameter and Response definitions -------
message CancelCommand_Parameters {
    sila2.org.silastandard.core.commands.cancelcontroller.v1.DataType_UUID CommandExecutionUUID = 1;
}

message CancelCommand_Responses {

}

message CancelAll_Parameters {

}

message CancelAll_Responses {

}


// ----------------- Metadata Definitions ------------------
